# kubecon-kaito-rag-demo

./: .env.sample  .gitignore  AGENTS.md  README.md  compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md  copilot.instructions.md
infra/azure/: core-components.tf  kaito.tf  kubernetes.tf  outputs.tf  variables.tf
infra/docker/: compose.yaml
infra/k8s/base/: kustomization.yaml
infra/k8s/overlays/kaito/: istio-destinationrule-gpt-oss-20b.yaml  istio-destinationrule-phi-4-mini-instruct.yaml  istio-gateway-kaito.yaml  istio-httprule-llm.yaml  kaito-ragengine-gpt-oss-20b.yaml  kaito-workspace-gpt-oss-20b.yaml  kaito-workspace-phi-4-mini-instruct.yaml  kustomization.yaml
infra/k8s/overlays/kaito-chat-app/: agent.yaml  istio-httprule-web.yaml  kustomization.yaml  web.yaml
infra/k8s/overlays/kaito-rag/: argo-workflowtemplate.yaml  cronworkflow.yaml  kustomization.yaml
infra/k8s/overlays/kaito-rag-chat-app/: kustomization.yaml
src/agent/: .env.example  AGENTS.md  DESIGN.md  README.md  kaito_client.py  main.py  pyproject.toml  test.http  test_agent.py  test_kaito.py
src/sched/: Dockerfile  all.ics  format_schedule.py  parse_schedule.py  pyproject.toml
src/sched/output/: schedule.json  schedule_index.json
src/web/: .dockerignore  AGENTS.md  package.json
src/web/app/: layout.tsx
src/web/app/api/chat/: route.ts
src/web/app/api/chat/history/[sessionId]/: route.ts
src/web/components/chat/: ChatInterface.tsx  MessageList.tsx
src/web/hooks/: useChat.ts
test/: 1-wks.http  2-gwaie.http  3-rag.http
